Added Notification center for Route Exchange and implemented all functions as well as finished MSI notifications and bug fixes